// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> should render an empty input field without a clear icon and with a down arrow icon 1`] = `
<div
  className="Input"
>
  <input
    className="Input__field"
    onChange={[MockFunction]}
    onClick={[MockFunction]}
    placeholder="MockPlaceholder"
    type="text"
    value=""
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root Input__open MuiSvgIcon-fontSizeSmall"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7 10l5 5 5-5z"
    />
  </svg>
</div>
`;

exports[`<Input/> snapshots should render an empty input field without a clear icon and with a down arrow icon 1`] = `
<div
  className="Input"
>
  <input
    className="Input__field"
    onChange={[MockFunction]}
    onClick={[MockFunction]}
    placeholder="MockPlaceholder"
    type="text"
    value=""
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root Input__open MuiSvgIcon-fontSizeSmall"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7 10l5 5 5-5z"
    />
  </svg>
</div>
`;

exports[`<Input/> snapshots should render an input field with a clear icon and with a down arrow icon 1`] = `
<div
  className="Input"
>
  <input
    className="Input__field"
    onChange={[MockFunction]}
    onClick={[MockFunction]}
    placeholder="MockPlaceholder"
    type="text"
    value="myValue"
  />
  <span
    className="Input__clear"
    data-testid="clear"
    onClick={[MockFunction]}
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </span>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root Input__open MuiSvgIcon-fontSizeSmall"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7 10l5 5 5-5z"
    />
  </svg>
</div>
`;
